--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a 21 year old who likes to laugh and have a good time with my friends </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from sydney NSW.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy snowboarding, watching movies, learning new things about the world and playing online games with friends.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to own my own media company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Wollongong NSW.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I currently work in hospitality and i want to engage in a career that i have an interest in and would enjoy doing. </p>
     </section>
 
     <footer id="footer">
